Finalizado repositorio de usuarios da api
