# docs/swagger.yaml
@@ -78,8 +78,23 @@ definitions:
           $ref: '#/definitions/response.UserResponse'
         type: array
     type: object
+  response.UserAddress:
+    properties:
+      cep:
+        type: string
+      city:
+        type: string
+      complement:
+        type: string
+      street:
+        type: string
+      uf:
+        type: string
+    type: object
   response.UserResponse:
     properties:
+      address:
+        $ref: '#/definitions/response.UserAddress'
       created_at:
         type: string
       email:
@@ -97,6 +112,38 @@ info:
   version: "1.0"
 paths:
   /user:
+    delete:
+      consumes:
+      - application/json
+      description: delete user by id
+      parameters:
+      - description: user id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httperr.RestErr'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/httperr.RestErr'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httperr.RestErr'
+      security:
+      - ApiKeyAuth: []
+      summary: Delete user
+      tags:
+      - user
     get:
       consumes:
       - application/json
@@ -157,74 +204,7 @@ paths:
       summary: Update user
       tags:
       - user
-  /user/{id}:
-    delete:
-      consumes:
-      - application/json
-      description: delete user by id
-      parameters:
-      - description: user id
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/httperr.RestErr'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/httperr.RestErr'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/httperr.RestErr'
-      security:
-      - ApiKeyAuth: []
-      summary: Delete user
-      tags:
-      - user
-    get:
-      consumes:
-      - application/json
-      description: Get user by id
-      parameters:
-      - description: user id
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/response.UserResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/httperr.RestErr'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/httperr.RestErr'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/httperr.RestErr'
-      security:
-      - ApiKeyAuth: []
-      summary: User details
-      tags:
-      - user
-  /user/password/{id}:
+  /user/password:
     get:
       consumes:
       - application/json
