# internal/database/sqlc/models.go
@@ -1,12 +1,26 @@
 // Code generated by sqlc. DO NOT EDIT.
 // versions:
-//   sqlc v1.26.0
+//   sqlc v1.27.0
 
 package sqlc
 
 import (
+	"database/sql"
 	"time"
 )
+
+type Address struct {
+	ID         string
+	Cep        string
+	Ibge       string
+	Uf         string
+	City       string
+	Complement sql.NullString
+	Street     string
+	CreatedAt  time.Time
+	UpdatedAt  time.Time
+	UserID     string
+}
 
 type User struct {
 	ID        string
