# internal/handler/response/user_response.go
@@ -3,11 +3,20 @@ package response
 import "time"
 
 type UserResponse struct {
-	ID        string    `json:"id"`
-	Name      string    `json:"name"`
-	Email     string    `json:"email"`
-	CreatedAt time.Time `json:"created_at"`
-	UpdatedAt time.Time `json:"updated_at"`
+	ID        string      `json:"id"`
+	Name      string      `json:"name"`
+	Email     string      `json:"email"`
+	Address   UserAddress `json:"address"`
+	CreatedAt time.Time   `json:"created_at"`
+	UpdatedAt time.Time   `json:"updated_at"`
+}
+
+type UserAddress struct {
+	CEP        string `json:"cep"`
+	UF         string `json:"uf"`
+	City       string `json:"city"`
+	Complement string `json:"complement,omitempty"`
+	Street     string `json:"street"`
 }
 
 type ManyUsersResponse struct {
